--- a/src/main/webapp/manifest.json
+++ b/src/main/webapp/manifest.json
@@ -13,7 +13,8 @@
       "type": "image/png"
     }
   ],
-  "start_url": "index.html?home=1",
+  "start_url": "./?home=1",
+  "scope": "/zkfragment-pwa-demo/",
   "display": "standalone",
   "background_color": "#007CA7",
   "theme_color": "#007CA7"
